2022-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/Magick++/Image.rst: Update getIndexes() and
        getConstIndexes() documention to mention that the selected region
        is defined by a prior getPixels(), getConstPixels(), or
        setPixels() call.  This is inspired by private email from Miro
        Kropáček on May 8, 2022.

        * coders/jpeg.c (WriteJPEGImage): Change "arithmetic" to
        "arithmetic-coding" in order to match ImageMagick's previously
        existing syntax.

        * coders/png.c (ReadOnePNGImage): Assure that entire image list is
        freed. Addresses oss-fuzz 46997 "graphicsmagick:coder_MNG_fuzzer:
        Indirect-leak in MagickMallocCleared".  This is a new issue due to
        incrementally seeking the complete correct error-handling cleanup.

2022-05-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * doc/options.imdoc: Add documentation for -define
        jpeg:arithmetic.

2022-04-30  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * coders/jpeg.c: Optionally enable arithmetic coder in JPG images.
        gm convert -define jpeg:arithmetic=true testimg.jpg arith.jpg

2022-04-27  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * jpeg/: Update aged JPG library to version 9d.

2022-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/ps.c (ReadPSImage): Assure that 'bounds' structure is
        initialized.

        * coders/ept.c (ReadEPTImage): Assure that 'bounds' structure is
        initialized.

        * magick/log.c (IsEventLogged): New function to report if a
        particular event will be logged.  Us this as much as possible
        throughout the software to replace use of IsEventLogging().

        * coders/png.c (ReadMNGImage): Address oss-fuzz 46913
        "graphicsmagick:coder_WPG_fuzzer: Indirect-leak in
        MagickMallocCleared" which was partially pre-existing and
        partially due to a botched fix for oss-fuzz 46843.
