@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220508"
-#define public MagickPackageReleaseDate "snapshot-20220508"
+#define public MagickPackageVersionAddendum ".020220529"
+#define public MagickPackageReleaseDate "snapshot-20220529"
