@@ -35,6 +35,11 @@
 <div class="document">
 
 
+<p>2022-05-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* Magick++/lib/Image.cpp: colorMapSize() method for returning the
+number of colormap entries should be a const method.  Change is
+due to an email from Miro Kropáček on May 29, 2022.</blockquote>
 <p>2022-05-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* www/Magick++/Image.rst: Update getIndexes() and
